Align dependency versions with Artemis. Align token provider wth Artemis