@@ -34,7 +34,7 @@ apply from: "gradle/docker.gradle"
 apply from: "gradle/swagger.gradle"
 //jhipster-needle-gradle-apply-from - JHipster will add additional gradle scripts to be applied here
 
-if (project.hasProperty("prod") || project.hasProperty("gae")) {
+if (project.hasProperty("prod")) {
     apply from: "gradle/profile_prod.gradle"
 } else {
     apply from: "gradle/profile_dev.gradle"
@@ -42,19 +42,6 @@ if (project.hasProperty("prod") || project.hasProperty("gae")) {
 
 if (project.hasProperty("war")) {
     apply from: "gradle/war.gradle"
-}
-
-if (project.hasProperty("gae")) {
-    apply plugin: 'maven'
-    apply plugin: 'org.springframework.boot.experimental.thin-launcher'
-    apply plugin: 'io.spring.dependency-management'
-
-    dependencyManagement {
-        imports {
-            mavenBom "tech.jhipster:jhipster-dependencies:${jhipsterDependenciesVersion}"
-        }
-    }
-    appengineStage.dependsOn thinResolve
 }
 
 if (project.hasProperty("zipkin")) {
@@ -67,20 +54,10 @@ idea {
     }
 }
 
-eclipse {
-    sourceSets {
-        main {
-            java {
-                srcDirs += ["build/generated/sources/annotationProcessor/java/main"]
-            }
-        }
-    }
-}
-
 defaultTasks "bootRun"
 
 springBoot {
-    mainClassName = "de.tum.in.www1.artemis.GatewayApp"
+    mainClass = "de.tum.in.www1.artemis.GatewayApp"
 }
 
 test {
@@ -88,11 +65,13 @@ test {
     testLogging {
         events 'FAILED', 'SKIPPED'
     }
-    jvmArgs += '-Djava.security.egd=file:/dev/./urandom -Xmx256m'
     // uncomment if the tests reports are not generated
     // see https://github.com/jhipster/generator-jhipster/pull/2771 and https://github.com/jhipster/generator-jhipster/pull/4484
     // ignoreFailures true
-    reports.html.enabled = false
+    testLogging.showStandardStreams = true
+    reports.html.required = false
+    jvmArgs "--illegal-access=warn"
+
 }
 
 task testReport(type: TestReport) {
@@ -122,9 +101,7 @@ repositories {
 
 dependencies {
     // import JHipster dependencies BOM
-    if (!project.hasProperty("gae")) {
-        implementation platform("tech.jhipster:jhipster-dependencies:${jhipster_dependencies_version}")
-    }
+    implementation platform("tech.jhipster:jhipster-dependencies:${jhipster_dependencies_version}")
 
     // Use ", version: jhipsterDependenciesVersion, changing: true" if you want
     // to use a SNAPSHOT release instead of a stable release
@@ -133,29 +110,29 @@ dependencies {
     }
     implementation "javax.annotation:javax.annotation-api"
     implementation "io.dropwizard.metrics:metrics-core"
-    implementation "io.micrometer:micrometer-registry-prometheus"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hppc"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
-    implementation "com.fasterxml.jackson.module:jackson-module-jaxb-annotations"
-    implementation "com.fasterxml.jackson.core:jackson-annotations"
-    implementation "com.fasterxml.jackson.core:jackson-databind"
-    implementation "javax.cache:cache-api"
+    implementation "io.micrometer:micrometer-registry-prometheus:1.7.2"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hppc:${fasterxml_version}"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${fasterxml_version}"
+    implementation "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:${fasterxml_version}"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:${fasterxml_version}"
+    implementation "com.fasterxml.jackson.core:jackson-databind:${fasterxml_version}"
+    implementation "javax.cache:cache-api:1.1.1"
     implementation "commons-beanutils:commons-beanutils:${commons_beanutils_version}"
     implementation "org.apache.commons:commons-lang3"
-    implementation "commons-codec:commons-codec"
-    implementation "javax.transaction:javax.transaction-api"
-    implementation "org.springframework.boot:spring-boot-loader-tools"
-    implementation "org.springframework.boot:spring-boot-starter-mail"
-    implementation "org.springframework.boot:spring-boot-starter-logging"
-    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "commons-codec:commons-codec:1.15"
+    implementation "javax.transaction:javax.transaction-api:1.3"
+    implementation "org.springframework.boot:spring-boot-loader-tools:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-mail:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-logging:${spring_boot_version}"
+    implementation "org.springframework.boot:spring-boot-starter-actuator:${spring_boot_version}"
     implementation "io.projectreactor.kafka:reactor-kafka"
-    implementation "org.springframework.boot:spring-boot-starter-security"
-    implementation ("org.springframework.boot:spring-boot-starter-webflux") {
+    implementation "org.springframework.boot:spring-boot-starter-security:${spring_boot_version}"
+    implementation ("org.springframework.boot:spring-boot-starter-webflux:${spring_boot_version}") {
         exclude module: "spring-boot-starter-tomcat"
     }
-    implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-starter-validation:${spring_boot_version}"
     implementation "io.netty:netty-tcnative-boringssl-static"
-    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${spring_boot_version}"
     implementation "org.zalando:problem-spring-webflux"
     implementation "org.springframework.cloud:spring-cloud-starter-gateway"
     implementation "com.github.vladimir-bukhtoyarov:bucket4j-core"
@@ -164,49 +141,40 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix"
     implementation "org.springframework.retry:spring-retry"
     implementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
-    implementation "org.springframework.cloud:spring-cloud-starter-config"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.0.3"
+    implementation "org.springframework.cloud:spring-cloud-starter-config:3.0.4"
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
-    implementation "org.springframework.security:spring-security-config"
-    implementation "org.springframework.security:spring-security-web"
+    implementation "org.springframework.security:spring-security-config:${spring_security_version}"
+    implementation "org.springframework.security:spring-security-web:${spring_security_version}"
     implementation "org.springframework.data:spring-data-jpa"
 
-    implementation "io.jsonwebtoken:jjwt-api"
-    if (!project.hasProperty("gae")) {
-        runtimeOnly "io.jsonwebtoken:jjwt-impl"
-        implementation "io.jsonwebtoken:jjwt-jackson"
-    } else {
-        implementation "io.jsonwebtoken:jjwt-impl"
-        implementation "io.jsonwebtoken:jjwt-jackson"
-    }
+//    implementation "io.jsonwebtoken:jjwt-api"
+    implementation "io.jsonwebtoken:jjwt-api:0.11.2"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.2"
     implementation ("io.springfox:springfox-oas")
-    implementation ("io.springfox:springfox-swagger2")
-    implementation "io.springfox:springfox-bean-validators"
-    implementation "mysql:mysql-connector-java"
+    implementation ("io.springfox:springfox-swagger2:3.0.0") {
+        exclude module: "mapstruct"
+    }
+    implementation "io.springfox:springfox-bean-validators:3.0.0"
+
     annotationProcessor "org.glassfish.jaxb:jaxb-runtime:${jaxb_runtime_version}"
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${spring_boot_version}"
-    testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testImplementation "org.springframework.security:spring-security-test"
-    testImplementation "org.springframework.boot:spring-boot-test"
-    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junit_platform_launcher_version}"
-    testImplementation "com.tngtech.archunit:archunit-junit5-api:${archunit_junit5_version}"
-    testRuntimeOnly "com.tngtech.archunit:archunit-junit5-engine:${archunit_junit5_version}"
-    testImplementation "com.h2database:h2"
+    annotationProcessor ("org.springframework.boot:spring-boot-configuration-processor:${spring_boot_version}") {
+        exclude group: "com.vaadin.external.google", module: "android-json"
+    }
+    testImplementation ("org.springframework.boot:spring-boot-starter-test:${spring_boot_version}") {
+        exclude module: "junit"
+        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
+        exclude group: "com.vaadin.external.google", module: "android-json"
+    }
+    testImplementation "org.springframework.security:spring-security-test:${spring_security_version}"
+    testImplementation "org.springframework.boot:spring-boot-test:${spring_boot_version}"
+    testImplementation "org.junit.jupiter:junit-jupiter:${junit_version}"
+    testImplementation "com.tngtech.archunit:archunit-junit5-api:0.20.1"
+    testRuntimeOnly "com.tngtech.archunit:archunit-junit5-engine:0.20.1"
     testImplementation "org.testcontainers:kafka"
     developmentOnly "org.springframework.boot:spring-boot-devtools:${spring_boot_version}"
     //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
-}
-
-if (project.hasProperty("gae")) {
-    task createPom {
-        def basePath = 'build/resources/main/META-INF/maven'
-        doLast {
-            pom {
-                withXml(dependencyManagement.pomConfigurer)
-            }.writeTo("${basePath}/${project.group}/${project.name}/pom.xml")
-        }
-    }
-    bootJar.dependsOn = [createPom]
 }
 
 task cleanResources(type: Delete) {
